Fixing some z-index issues with the section nav

--- a/web/assets/scss/components/_section-nav.scss
+++ b/web/assets/scss/components/_section-nav.scss
@@ -11,6 +11,11 @@
     z-index: 5;
     width: 100%;
     position: fixed;
+    pointer-events: none;
+
+    .section-navigation {
+      pointer-events: auto;
+    }
   }
   &.bottom-stuck {
     top: auto;
